# test-rust-cli

./: Cargo.toml  README.md
